--- a/BayesLogisticRegression.ipynb
+++ b/BayesLogisticRegression.ipynb
@@ -83,12 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 43,
    "id": "f582a389",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def log_regression(X, y, k, x0, d, lamb,freq):\n",
+    "def LMC_log_regression(X, y, k, x0, d, lamb,freq):\n",
     "    gamma = 1/(k**(4/5))\n",
     "    x = x0.copy()\n",
     "    all_iterates = []\n",
@@ -106,12 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "id": "88c409ff",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def penalized_log_regression(X, y, k, x0, d, lamb, freq):\n",
+    "def penalized_LMC_log_regression(X, y, k, x0, d, lamb, freq):\n",
     "    gamma = 1/(k**(4/5))\n",
     "    x = x0.copy()\n",
     "    all_iterates = []\n",
@@ -267,8 +267,8 @@
     }
    ],
    "source": [
-    "iterates = penalized_log_regression(X_train_client, y_train_client, k, x0, d, lamb, freq)\n",
-    "orig_iterates = log_regression(X_train_client, y_train_client, k, x0, d, lamb, freq)"
+    "iterates = penalized_LMC_log_regression(X_train_client, y_train_client, k, x0, d, lamb, freq)\n",
+    "orig_iterates = LMC_log_regression(X_train_client, y_train_client, k, x0, d, lamb, freq)"
    ]
   },
   {
@@ -438,8 +438,8 @@
     "y_train_client = np.array_split(y_train,num_of_clients)\n",
     "y_test_client = np.array_split(y_test,num_of_clients)\n",
     "\n",
-    "iterates = penalized_log_regression(X_train_client, y_train_client, k, x0, d, lamb, freq)\n",
-    "orig_iterates = log_regression(X_train_client, y_train_client, k, x0, d, lamb,freq)\n",
+    "iterates = penalized_LMC_log_regression(X_train_client, y_train_client, k, x0, d, lamb, freq)\n",
+    "orig_iterates = LMC_log_regression(X_train_client, y_train_client, k, x0, d, lamb,freq)\n",
     "\n",
     "lensize = len(iterates)\n",
     "\n",
